TODO: Fix Dark mode toggle causing infinite rerender loop

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,6 +1,7 @@
 /* Add a black background color to the top navigation */
 .topnav {
-    background-color: #333;
+    background-color: #FFF;
+    border: #888 solid 1px;
     overflow: hidden;
   }
   
@@ -8,7 +9,7 @@
   .topnav a {
     float: left;
     display: block;
-    color: #f2f2f2;
+    color: #000;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -17,13 +18,13 @@
   
   /* Change the color of links on hover */
   .topnav a:hover {
-    background-color: #ddd;
+    background-color: #444;
     color: black;
   }
   
   /* Add an active class to highlight the current page */
   .topnav a.active {
-    background-color: #04AA6D;
+    background-color: #002;
     color: white;
   }
   
