--- a/src/css/login.css
+++ b/src/css/login.css
@@ -1,32 +1,104 @@
 .login-container {
     width: 400px;
-    height: 600px;
-    margin: 8px auto;
-    opacity: 0.8;
-    background: #000;
-    justify-content: center;
+	height: 600px;
+	margin-top: 8px;
+	margin-left: auto;
+	margin-right: auto;
+	background: #000;
+    color: #FFF;
+	opacity: 0.8;
 }
 
-.center-div header a {
+.login-container form {
+	display: inline-block;
+    width: 100%;
+    height: 160px;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-block-end: 0px;
+}
+
+.login-container input[type=text], 
+.login-container input[type=password] {
+    width: 380px;
+    height: 30px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    background-color: transparent;
+    border-style: none;
+    border-bottom: 1px solid #111;
+    color: #888;
+}
+
+.login-container input[type=text]:focus, 
+.login-container input[type=password]:focus {
+    border-bottom: 1px solid #004;
+}
+
+.login-container input[type=submit] {
+    width: 380px;
+    height: 40px;
+    color: #FFF;
+    margin-bottom: 5px;
+    background-color: #004;
+    border-style: none;
+}
+
+.login-container button[type=recoverbtn] {
+    height: 70px;
+    border-style: none;
+    width: 100%;
+    opacity: 0.9;
+    font-size: 24px;
+    margin-bottom: 0px;
+    background-color: #111;
+    color: #FFF;
+}
+
+.login-container header a {
 	font-size: 30px;
 	display: block;
 	text-align: center;
 }
 
-.center-div header {
+.login-container header {
 	padding-top: 20px;
 }
 
+.login-container button.signup-toggle {
+    height: 35px;
+    border-style: none;
+    width: 100%;
+    opacity: 0.9;
+    font-size: 12px;
+    margin-bottom: 277px;
+    background-color: transparent;
+    color: #FFF;
+}
 
 @media screen and (max-width: 600px) {
-    .center-div {
+
+    .login-container  {
         width: 100%;
         margin-left: 0px;
         margin-right: 0px;
     }
 
-    form {
+    .login-container form {
         margin-left: 0px;
         margin-right: 0px;
+    }
+
+    .login-container input[type=submit] {
+        width: 100%;
+        margin-left: 0px;
+        margin-right: 0px;
+    }
+
+    .login-container input[type=text], 
+    .login-container input[type=password] {
+        width: 98%;
+        margin-left: 1%;
+        margin-right: 1%;
     }
 }
