This is coming along pretty nicely. The basics are done, now onto actual implementation

--- a/static/sass/_fonts.scss
+++ b/static/sass/_fonts.scss
@@ -2,3 +2,5 @@
     font-family: 'FA Solid';
     src: url(../webfonts/fa-solid-900.woff2) format(opentype);
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display&display=swap');
