--- a/static/sass/footer.scss
+++ b/static/sass/footer.scss
@@ -1,13 +1,15 @@
 .copyright {
     justify-content: center;
-    font-size: 24px;
+    font-size: 12px;
     color: #eee;
     text-align: center;
     background-color: #010409;
     height: 300px;
     vertical-align: middle;
+    padding: 0px;
 
     p {
+        margin: 0px;
         padding-top: 100px;
     }
 }
