Something broke and I don't know what

--- a/static/sass/login.scss
+++ b/static/sass/login.scss
@@ -72,6 +72,12 @@
     }
 
     .third-party {
+        display: grid;
+
+        p {
+            justify-self: center;
+        }
+
         .icons {
             display: flex;
             justify-content: space-around;
