--- a/static/scss/main.scss
+++ b/static/scss/main.scss
@@ -1,7 +1,7 @@
 @import "fonts";
 @import "theming";
 
-.root {
+body {
     font-family: 'Red Hat Display', sans-serif;
     @include themify {
         background-color: themed("backgroundColor");
