--- a/static/scss/login.scss
+++ b/static/scss/login.scss
@@ -20,8 +20,7 @@
     input[type=password] {
         width: 380px;
         height: 30px;
-        margin-top: 10px;
-        margin-bottom: 10px;
+        margin: 10px;
         background-color: transparent;
         border-style: none;
         border-bottom: 1px solid #111;
@@ -34,7 +33,7 @@
         width: 380px;
         height: 40px;
         color: #FFF;
-        margin-bottom: 5px;
+        margin: 5px;
         background-color: #004;
         border-style: none;
     }
@@ -45,7 +44,7 @@
         width: 100%;
         opacity: 0.9;
         font-size: 24px;
-        margin-bottom: 0px;
+        margin: 0px;
         background-color: #111;
         color: #FFF;
     }
